WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35876
HTMLMediaElement style improvements
https://bugs.webkit.org/show_bug.cgi?id=35876
Summary
HTMLMediaElement style improvements
Darin Adler
Reported
2010-03-08 13:24:35 PST
HTMLMediaElement style improvements
Attachments
Patch
(12.62 KB, patch)
2010-03-08 13:31 PST
,
Darin Adler
jhoneycutt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-03-08 13:31:57 PST
Created
attachment 50243
[details]
Patch
WebKit Review Bot
Comment 2
2010-03-08 13:38:40 PST
Attachment 50243
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/354047
Jon Honeycutt
Comment 3
2010-03-08 13:42:10 PST
Comment on
attachment 50243
[details]
Patch r=me
Darin Adler
Comment 4
2010-03-08 13:45:32 PST
src/WebMediaPlayerClientImpl.cpp:141: error: ‘WebCore::MediaPlayerClient’ is an inaccessible base of ‘WebCore::HTMLMediaElement’ Frame* frame = static_cast<HTMLMediaElement*>( m_mediaPlayer->mediaPlayerClient())->document()->frame(); m_webMediaPlayer.set(createWebMediaPlayer(this, frame)); If the MediaPlayer is in fact always an HTMLMediaElement, then the class should hold an HTMLMediaElement*, not a MediaPlayer*. It's not safe to downcast.
Darin Adler
Comment 5
2010-03-08 13:53:29 PST
My mistake, it’s MediaPlayerClient* that is being downcast. If we really need to find out the Frame* then I think we should add a function to MediaPlayerClient* that returns it rather than doing this cast.
Darin Adler
Comment 6
2010-03-08 14:16:16 PST
Committed
r55682
: <
http://trac.webkit.org/changeset/55682
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug